# gymBuddi

./: Addition - Test  GUI - Development Plan  GUI stage 1  License  READ.me  README.md  Research  UnitTestingOverview  UnitTestingOverview.md  hello
NeuralNetworkCreater/: README.md  train.py  (+1 more)
Unit Testing/: CMakeLists.txt  README.md
Unit Testing/tst/: CountUpTimerTest.cpp  PipelineLink_test.cpp  ResetPushButtonTest.cpp  Scene_test.cpp
code/: CMakeLists.txt
code/Examples/opencv-camera-callback/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  window.cpp
code/Examples/qcustomplotdemo/qcustomplotdemo/: CMakeCache.txt
code/Examples/qtSinePlayer/qtSinePlayer/: CMakeLists.txt  cmake_install.cmake  main.cpp  qtsineplay  window.cpp
code/Examples/qwt-example/qwt-example/: CMakeCache.txt  Makefile  qwt-example
code/Examples/qwt-example1/qwt-example/: CMakeCache.txt  Makefile  cmake_install.cmake  qwt-example1  window.cpp  window.h
code/GUI/: GUI stage 1
code/GUI-3/: CMakeCache.txt  CMakeLists.txt  Readme.md  camera.cpp  camera.h  main.cpp  mainwindow.cpp  mainwindow.h  window.cpp  window.h
code/GUI-3/gymBuddi_autogen/: mocs_compilation.cpp
code/GUI-3/gymBuddi_autogen/EWIEGA46WW/: moc_countuptimer.cpp.d  moc_mainwindow.cpp
code/GUI-3/test_autogen/EWIEGA46WW/: moc_CountUpTimer.cpp  moc_CountUpTimer.cpp.d  moc_MainWindow.cpp
code/GUI/GUI-1/: CMakeLists.txt  Makefile  main.cpp  webcam-viewer  window.cpp  window.h
code/GUI/GUI-1/webcam-viewer_autogen/EWIEGA46WW/: moc_window.cpp.d
code/GUI/GUI-2/: CMakeCache.txt  CMakeLists.txt  Makefile  mainwindow.cpp  mainwindow.h  test
code/GUI/GUI-2/test_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
code/GUI/GUI-3/: CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake  countuptimer.cpp  countuptimer.h  gymBuddi  mainwindow copy with timer .cpp  mainwindow copy with timer.h  mainwindow copy.cpp  mainwindow.cpp  mainwindow.h  test  window.cpp  window.h
code/GUI/GUI-3/gymBuddi_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d  moc_window.cpp  moc_window.cpp.d
code/GUI/GUI-3/test_autogen/EWIEGA46WW/: moc_MainWindow.cpp.d  moc_countuptimer.cpp  moc_countuptimer.cpp.d  moc_mainwindow.cpp.d  moc_window.cpp.d
code/GUI/Timer/: timer
code/GUI/repcounter/: main.cpp  repcounter.cpp  repcounter.h  test
code/GUI/repcounter/test_autogen/: mocs_compilation.cpp
code/GUI/repcounter/test_autogen/EWIEGA46WW/: moc_repcounter.cpp  moc_repcounter.cpp.d
code/GUI/timer-2/: CMakeLists.txt  CountUpTimer.cpp  TimerControls.cpp  cmake_install.cmake  main.cpp
code/GUI/timer-2/test_autogen/EWIEGA46WW/: moc_CountUpTimer.cpp.d  moc_TimerControls.cpp  moc_countuptimer.cpp  moc_countuptimer.cpp.d  moc_timercontrols.cpp  moc_timercontrols.cpp.d
code/GUI/timer1/: mytimer.cpp  mytimer.h  test
code/GUI/timer1/test_autogen/EWIEGA46WW/: moc_mytimer.cpp  moc_mytimer.cpp.d
code/historical/: Readme.md
code/historical/Examples/opencv-camera-callback/: CMakeCache.txt  cmake_install.cmake  webcam-viewer  window.cpp  window.h
code/historical/Examples/qcustomplotdemo/qcustomplotdemo/: Makefile  cmake_install.cmake  qcustomplotdemo
code/historical/Examples/qtSinePlayer/qtSinePlayer/: CMakeCache.txt  Makefile  README.md  window.h
code/historical/Examples/qwt-example/qwt-example/: cmake_install.cmake
code/historical/Examples/qwt-example1/qwt-example/: CMakeLists.txt  window.cpp  window.h
code/historical/GUI/: GUI - Development Plan
code/historical/GUI/GUI-1/: CMakeCache.txt  cmake_install.cmake  mainwindow.h  window.cpp  window.h
code/historical/GUI/GUI-2/: camera.h  cmake_install.cmake  main.cpp  mainwindow.h
code/historical/GUI/Timer/: timer.cpp
code/historical/GUI/repcounter/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
code/historical/GUI/timer-2/: CMakeCache.txt  CountUpTimer.h  Makefile  TimerControls.h  test
code/historical/GUI/timer-2/test_autogen/: moc_predefs.h  mocs_compilation.cpp
code/historical/GUI/timer1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test
code/historical/headers/: window.h
code/historical/image/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainwindow.cpp
code/image/: mainwindow.cpp  mainwindow.h  test
code/source/: main.cpp
src/: BlockingQueue.cpp  BlockingQueue.h  CMakeLists.txt  CNNProcessor.cpp  CNNProcessor.h  CNNProcessorSettings.h  Camera.cpp  Camera.h  CameraSettings.h  Gui.cpp  Gui.h  LinkSplitter.cpp  LinkSplitter.h  MockPipelineLink.h  PipelineLink.cpp  PipelineLink.h  PreProcessor  PreProcessor.cpp  PreProcessor.h  PreProcessorSettings.h  ProgressBar.cpp  ProgressBar.h  QtGeneratedGui.h  README.md  Scene.h  SceneCallback.h  ScheduableLink.cpp  ScheduableLink.h  Timer.cpp  Timer.h  camera.cpp  camera.h  exercise_image.h  exerciseimage  exerciseimage.h  gymBuddi.h  image_processor.cpp  image_processor.h  imageprocessor.h  main.cpp  (+6 more)
unitTesting/: CMakeLists.txt  README.md  test_run.cpp
unitTesting/CNNProcessor/: AmendedCNN_test.cpp  CNNProcessor_test.cpp  test_cnnprocessor.cpp
unitTesting/Camera/: AmendedCamera_test.cpp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  runCameraTest.cpp  test_camera.h
unitTesting/Count-up Timer/: CMakeLists.txt  CountUpTimer.h
unitTesting/GUI/: README.md
unitTesting/GUI/GUI-1/: CMakeLists.txt
unitTesting/LinkSplitter/: AmendedLinkSplitter_test.cpp  LinkSplitter_test.cpp
unitTesting/Pre-processor/: PreProcessor_test.cpp
unitTesting/Reset Pushbutton/: CMakeLists.txt  ResetPushButtonTest.cpp  ResetPushButtonTest.h  test_reset.cpp
unitTesting/Scene/: test_scene.cpp
unitTesting/ScenePipelineLink/: AmendedPipelineLink_test.cpp
unitTesting/practiseUnitTest/: CMakeLists.txt
unitTesting/practiseUnitTest/src/: Formula.cpp  Formula.h  main.cpp
unitTesting/practiseUnitTest/tst/: Formula-test.cpp
unitTesting/tst/: CMakeLists.txt  camera_test.cpp  cnnprocessor_test.cpp  countuptimer_test.cpp  linksplitter_test.cpp  main.cpp  pipelinelink_test.cpp  preprocessor_test.cpp  scene_test.cpp
unitTesting/tst/tst/: main.cpp
(+21 files in other folders)
